--- a/src/app/modules/shared/components/menu-sidenav/menu-sidenav.component.html
+++ b/src/app/modules/shared/components/menu-sidenav/menu-sidenav.component.html
@@ -20,6 +20,9 @@
   <a (click)="onToggle($event)">
     <mat-icon class="mat-18" *ngIf="toggle" class="mr5">{{mdIconClose}}</mat-icon>
   </a>
+
+  <span *ngIf="params.textToCloseArea" id="close-area-text">{{params.textToCloseArea}}</span>
+
   <div>
     <mat-icon class="mat-18" class="mr20">settings</mat-icon>
     <mat-icon class="mat-18" class="mr20">person</mat-icon>
