--- a/src/app/modules/main/components/event/event.component.html
+++ b/src/app/modules/main/components/event/event.component.html
@@ -1,3 +1,23 @@
-<p>
-  event works!
-</p>
+<mat-card>
+  <form (ngSubmit)="onEventFormSubmit()" [formGroup]="eventForm">
+    <mat-card-header>
+        <mat-card-title>Teste</mat-card-title>
+        <mat-card-subtitle>Testando formulários</mat-card-subtitle>
+    </mat-card-header>
+    
+    <mat-card-content>
+      <mat-grid-list cols="1" rowHeight="100px">
+        <mat-grid-tile colspan="1" rowspan="1">
+          <mat-icon class="icon-pattern mat-18">person</mat-icon>
+          <mat-form-field>
+            <input matInput formControlName="test" type="text" placeholder="Test *">
+          </mat-form-field>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </mat-card-content>
+
+    <mat-card-actions align="start">
+      <button mat-raised-button color="primary" type="submit" [disabled]="!eventForm.valid">Action1</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
